--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/alumnos_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=P1ayera+erde
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-cpu9oblds78s73e3b8bg-a.oregon-postgres.render.com:5432/alumnos_db?user=admin&password=cUkFF1HDHalovpOGFy3yWAoSaTX3Wun0
+spring.datasource.username=admin
+spring.datasource.password=cUkFF1HDHalovpOGFy3yWAoSaTX3Wun0
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA y Hibernate
+# Configuraciones adicionales
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
