--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-cpu9oblds78s73e3b8bg-a.oregon-postgres.render.com:5432/alumnos_db?user=admin&password=cUkFF1HDHalovpOGFy3yWAoSaTX3Wun0
+spring.datasource.username=admin
+spring.datasource.password=cUkFF1HDHalovpOGFy3yWAoSaTX3Wun0
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuraciones adicionales
